--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ http {
 
     server {
         listen 80;
-        server_name 31.97.250.28;
+        server_name localhost;
 
         location / {
             proxy_pass http://app;
@@ -21,6 +21,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 86400;
         }
 
         # Health check endpoint
