--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -10,19 +10,17 @@ COPY package*.json ./
 COPY prisma ./prisma/
 
 # Instalar dependências
-RUN npm ci --only=production
+RUN npm ci
 
 # Copiar código da aplicação
 COPY . .
 
-# Build da aplicação (sem acessar banco)
-ENV NODE_ENV=production
-ENV DATABASE_URL="file:./dev.db"
-RUN npm run build
+# Gerar cliente Prisma
+RUN npx prisma generate
 
 EXPOSE 3000
 
-# Script de inicialização que gera o Prisma e inicia a aplicação
+# Script de inicialização que sincroniza o banco e inicia a aplicação
 COPY docker-entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
