Correção: adicionar build do Next.js para produção

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -18,6 +18,10 @@ COPY . .
 # Gerar cliente Prisma
 RUN npx prisma generate
 
+# Build da aplicação para produção
+ENV NODE_ENV=production
+RUN npm run build
+
 EXPOSE 3000
 
 # Script de inicialização que sincroniza o banco e inicia a aplicação
